--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppEntrePatas">
+        <activity android:name=".SingupActivity"
+            android:theme="@style/Theme.AppEntrePatas.NoActionBar" />
+        <activity android:name=".LoginActivity"
+            android:theme="@style/Theme.AppEntrePatas.NoActionBar"/>
+        <activity android:name=".MainActivity"
+            android:theme="@style/Theme.AppEntrePatas.NoActionBar"/>
         <activity
-            android:name=".MainActivity"
+            android:name=".HomeActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.AppEntrePatas.NoActionBar">
             <intent-filter>
