--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,6 @@
+//apply plugin: 'com.android.application'
+//apply plugin: 'com.google.gms.google-services'
+
 plugins {
     id 'com.android.application'
 }
@@ -41,6 +44,8 @@ dependencies {
 
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation platform('com.google.firebase:firebase-bom:26.3.0')
+    implementation platform('com.google.firebase:firebase-bom:26.3.0')
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
