--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,11 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation platform('com.google.firebase:firebase-bom:26.3.0')
     implementation platform('com.google.firebase:firebase-bom:26.3.0')
+    //implementation 'com.google.firebase:firebase-messaging-directboot:20.2.0'
+    implementation platform('com.google.firebase:firebase-bom:26.2.0')
+    implementation 'com.google.firebase:firebase-messaging'
+    implementation 'com.google.firebase:firebase-analytics'
+    //implementation 'com.google.firebase:firebase-messaging:20.1.7'
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
