--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
     <application
         android:name=".helper.MyApp"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -61,7 +61,7 @@
 
         <!-- Firebase -->
         <service
-            android:name=".FbMessagingService"
+            android:name=".util.FbMessagingService"
             android:exported="false"
             android:directBootAware="true">
             <intent-filter>
